# Backend_Axum_Rust

./: .gitignore
Database_routing/: .gitignore  Cargo.toml  docker-compose.yml
Database_routing/database/: init.sql
Database_routing/src/: lib.rs  main.rs
Database_routing/src/database/: mod.rs  prelude.rs  tasks.rs  users.rs
Database_routing/src/routes/: create_task.rs  delete_task.rs  get_task.rs  hello_world.rs  mod.rs  partial_update_task.rs  update_task.rs  users.rs
Hello_World/: .gitignore  Cargo.toml
Hello_World/src/: lib.rs  main.rs
Hello_World/src/routes/: always_errors.rs  custom_json_extractor.rs  get_json.rs  hello_world_handler.rs  middleware_message.rs  mirror_body_json.rs  mirror_body_string.rs  mirror_custom_header.rs  mod.rs  path_variables.rs  query_params.rs  read_middleware_custom_headers.rs  returns_201.rs  set_middleware_custom_headers.rs  validate_data_with_serde.rs
