[package]
name = "Database_routing"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1"}
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
sea-orm = { version = "1.1.6", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full", "macros"] }
